syntax = "proto3";

option go_package = "./pb";

service FileService{
  rpc Upload(UploadRequest) returns (UploadReply){}
}

message UploadRequest{
  uint32 file_type = 1;
  string file_name = 2;
  bytes contents = 3;
  string session_id = 4;
}
message UploadReply {
  string file_url = 1;
  string file_name = 2;
}